<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; on your smartphone or computer and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="about_prefsTitle">About BigRoad</string>
    <string name="autoDutyStatus_summary">Automatically change duty status when on duty</string>
    <string name="autoDutyStatus_title">Automatic duty status</string>
    <string name="corpsite_prefsSummary">www.bigroad.com</string>
    <string name="corpsite_prefsTitle">BigRoad Website</string>
    <string name="dailyLogHeader_editButton">Edit</string>
    <string name="dailyLogHeader_hosCycle">Cycle</string>
    <string name="dailyLogHeader_hosRecap">Recap Type</string>
    <string name="dailyLogHeader_hosTimeDrivingToday">Time Driving Today</string>
    <string name="dailyLogHeader_hosTimeOnDuty7Days">Time On Duty (7 days)</string>
    <string name="dailyLogHeader_hosTimeOnDuty8Days">Time On Duty (8 days)</string>
    <string name="dailyLogHeader_hosTimeOnDutyToday">Time On Duty Today</string>
    <string name="dailyLogHeader_hosTimezone">Timezone</string>
    <string name="dailyLogHeader_hosTitle">HOURS OF SERVICE</string>
    <string name="dailyLogHeader_midnight">Midnight</string>
    <string name="dailyLogHeader_periodStart">24 hr Period Start</string>
    <string name="dailyLogInspectSummary_cycleDutyRemaining">Cycle on duty time remaining</string>
    <string name="dailyLogInspectSummary_cycleDutyUsed">Cycle on duty time used</string>
    <string name="dashLink_dashLinkIdLabel">Device ID:</string>
    <string name="dashLink_dashLinkVersionLabel">Device Version:</string>
    <string name="dashLink_disconnectedSuggestionText">Please make sure the vehicle is turned on, and you are in the cab of the vehicle. It may take several seconds to reconnect…</string>
    <string name="dashLink_drivingWithoutDashLinkExplanation">BigRoad detected vehicle movement, but DashLink was not connected at the time. Use paper logs until DashLink is connected again.</string>
    <string name="dashLink_manufacturerLabel">Manufacturer:</string>
    <string name="dashLink_modelYearLabel">Model Year:</string>
    <string name="dashLink_noFleetText">To use DashLink, you must be a member of a BigRoad fleet. You can join an existing fleet or sign up for a free trial fleet account on the BigRoad website. A DashLink device is also required.</string>
    <string name="dashLink_odometerLabel">Odometer:</string>
    <string name="dashLink_odometerNote">To adjust odometer, please contact your administrator.</string>
    <string name="dashLink_overviewLearnMore">Learn More</string>
    <string name="dashLink_overviewText">DashLink is a simple, affordable, and flexible way for you to achieve ELD mandate compliance. Automatically create logs, prevent form and manner errors, and stop violations.</string>
    <string name="dashLink_overviewTitle">Discover BigRoad’s DashLink</string>
    <string name="dashLink_prefsSummary">View or repair DashLink connection</string>
    <string name="dashLink_prefsTitle">DashLink</string>
    <string name="dashLink_setOdometerButton">Adjust Odometer</string>
    <string name="dashLink_statusTitle_connected">DashLink Connected</string>
    <string name="dashLink_truckNumberLabel">Truck Number:</string>
    <string name="dashLink_vinLabel">VIN:</string>
    <string name="dashLink_visitWebsite">Go to bigroad.com</string>
    <string name="editPerson_prefsSummary">Name, email address, password, time zone, duty cycle, etc.</string>
    <string name="editPerson_prefsTitle">My Profile</string>
    <string name="faq_prefsSummary">Frequently Asked Questions</string>
    <string name="faq_prefsTitle">FAQ</string>
    <string name="hosChooser_100AirMileShortHaul">Short-haul operations, 100 air-mile radius driver §395.1 (e)(1)</string>
    <string name="hosChooser_24HrReset">24-hour cycle reset for oilfield operations, ground water drilling, construction materials and equipment §395.1 (d)(1), (l), (m)</string>
    <string name="hosChooser_bigDay">16-Hour “Big Day” Short-Haul Exception §395.1 (o)</string>
    <string name="hosChooser_california500Gallon">Tank vehicle with a capacity of more than 500 gallons transporting flammable liquid</string>
    <string name="hosChooser_californiaExceptionsHeading">California intrastate exceptions:</string>
    <string name="hosChooser_cycleHeading">Selected cycle:</string>
    <string name="hosChooser_doneButton">Done</string>
    <string name="hosChooser_motionPicture">Motion picture, 100 air-mile radius driver §395.1 (p)</string>
    <string name="hosChooser_oilfieldSpecialist">Oilfield waiting time §395.1 (d)(2)</string>
    <string name="hosChooser_passengerCarrying">@string/cycle_passengerCarrying</string>
    <string name="hosChooser_propertyCarrying">@string/cycle_propertyCarrying</string>
    <string name="hosChooser_restBreakExempt">30-minute break exempt under a current state or federal waiver (e.g. livestock haulers)</string>
    <string name="hosChooser_texas150AirMileShortHaul">Short-haul operations, 150 air-mile radius driver §4.12 (a)(4), (b)(3)</string>
    <string name="hosChooser_texasExceptionsHeading">Texas intrastate exceptions:</string>
    <string name="hosChooser_usExceptionsHeading">U.S. exceptions:</string>
    <string name="hosChooser_usShortHaulExceptionsHeading">U.S. short-haul exceptions:</string>
    <string name="hosChooser_usShortHaulExceptionsNote">You may only select a maximum of one short-haul exception.</string>
    <string name="hosChooser_vehicleTypeHeading">Vehicle type:</string>
    <string name="hosSummary_breakDutyStatusDetails">(Off Duty or Sleeper)</string>
    <string name="hosSummary_breakMinimum">Minimum break:</string>
    <string name="hosSummary_untilRestBreak">Until rest break:</string>
    <string name="legal_prefsSummary">End User License Agreement</string>
    <string name="legal_prefsTitle">Legal</string>
    <string name="lock_out_screen_prefsDefault">@string/lock_out_screen_option_main_dashboard</string>
    <string name="lock_out_screen_prefsDialogTitle">Select driving lockout screen</string>
    <string name="lock_out_screen_prefsSummary">Set which view should be displayed when driving</string>
    <string name="lock_out_screen_prefsTitle">Driving Lockout screen</string>
    <string name="placeholder_minimumBreak">0:30</string>
    <string name="placeholder_untilBreak">8:00</string>
    <string name="prefs_aboutCategory">About</string>
    <string name="prefs_generalCategory">General</string>
    <string name="prefs_helpCategory">Help</string>
    <string name="privacy_prefsSummary">Privacy Policy</string>
    <string name="privacy_prefsTitle">Privacy</string>
    <string name="prominentDisclosureDialog_prefsSummary">Allow collection of application data and contact data</string>
    <string name="prominentDisclosureDialog_prefsTitle">Data Collection</string>
    <string name="rateApp_prefsSummary">Take a moment to rate BigRoad</string>
    <string name="rateApp_prefsTitle">Rate BigRoad</string>
    <string name="shareApp_prefsSummary">Email, SMS, Twitter, Facebook</string>
    <string name="shareApp_prefsTitle">Share BigRoad</string>
    <string name="support_prefsSummary">Send BigRoad an email</string>
    <string name="support_prefsTitle">Support &amp; Feedback</string>
    <string name="userManual_prefsSummary">DashLink ELD User Manual</string>
    <string name="userManual_prefsTitle">User Manual</string>
    <string name="autoDutyStatus_key">autoDutyStatus</string>
    <string name="lockOutScreen_key">lockOutScreen</string>
    <string name="prominentDisclosure_key">prominentDisclosureAccepted</string>
    <string name="rate_key">rate</string>
    <string name="support_key">support</string>
    <string name="url_userManual">https://www.bigroad.com/resources/user_manual?utm_campaign=BigRoad Admin&amp;utm_content=settings&amp;utm_medium=mobile&amp;utm_source=bigroad</string>
</resources>