<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing">
        <TextView android:id="@id/dashLink_statusTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_statusTitle_connected" style="?attr/boldTextStyle" />
        <TextView android:id="@id/dashLink_malfunctionText" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_drivingWithoutDashLinkExplanation" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_statusText" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_noFleetText" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_statusSuggestionText" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_disconnectedSuggestionText" style="?attr/normalTextStyle" />
        <Button android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/dashLink_statusActionButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_visitWebsite" style="@style/PaddedButton" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dashLink_connectedView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/group_spacing">
        <TextView android:id="@id/dashLink_truckNumber" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_truckNumberLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_modelYear" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_modelYearLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_manufacturer" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_manufacturerLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_odometer" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_odometerLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_genx_odometer_note" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_odometerNote" style="?attr/smallTextStyle" />
        <TextView android:id="@id/dashLink_vin" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_vinLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_dashLinkId" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_dashLinkIdLabel" style="?attr/normalTextStyle" />
        <TextView android:id="@id/dashLink_dashLinkVersion" android:paddingLeft="@dimen/big_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dashLink_dashLinkVersionLabel" style="?attr/normalTextStyle" />
        <Button android:id="@id/dashLink_setOdometerButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_spacing" android:text="@string/dashLink_setOdometerButton" style="@style/PaddedButton" />
    </LinearLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_overviewTitle" style="?attr/boldTextStyle" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/widget_spacing" android:text="@string/dashLink_overviewText" style="?attr/normalTextStyle" />
    <TextView android:textStyle="bold" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/dashLink_learnMoreTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dashLink_overviewLearnMore" style="?attr/normalTextStyle" />
</merge>
