<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_cycleHeading" style="?attr/boldTextStyle" />
        <com.bigroad.ttb.android.widget.OurSpinner android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/cycle_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/big_padding" android:layout_marginRight="@dimen/border_padding" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_vehicleTypeHeading" style="?attr/boldTextStyle" />
        <RadioGroup android:orientation="vertical" android:id="@id/hosChooser_vehicleTypeGroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginRight="@dimen/border_padding">
            <RadioButton android:id="@id/hosChooser_propertyButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hosChooser_propertyCarrying" />
            <RadioButton android:id="@id/hosChooser_passengerButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hosChooser_passengerCarrying" />
        </RadioGroup>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_usExceptionsHeading" style="?attr/boldTextStyle" />
        <CheckBox android:id="@id/hosChooser_restBreakExempt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_restBreakExempt" />
        <CheckBox android:id="@id/hosChooser_24HrReset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_24HrReset" />
        <CheckBox android:id="@id/hosChooser_oilfieldSpecialist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_oilfieldSpecialist" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_usShortHaulExceptionsHeading" style="?attr/boldTextStyle" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_usShortHaulExceptionsNote" style="?attr/smallTextStyle" />
        <CheckBox android:id="@id/hosChooser_100AirMileShortHaul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_100AirMileShortHaul" />
        <CheckBox android:id="@id/hosChooser_bigDay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_bigDay" />
        <CheckBox android:id="@id/hosChooser_motionPicture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_motionPicture" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_californiaExceptionsHeading" style="?attr/boldTextStyle" />
        <CheckBox android:id="@id/hosChooser_california500Gallon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_california500Gallon" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_texasExceptionsHeading" style="?attr/boldTextStyle" />
        <CheckBox android:id="@id/hosChooser_texas150AirMileShortHaul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/border_padding" android:layout_marginTop="@dimen/widget_spacing" android:layout_marginRight="@dimen/border_padding" android:text="@string/hosChooser_texas150AirMileShortHaul" />
        <RelativeLayout android:background="@drawable/toolbar_background_horizontal" android:padding="@dimen/border_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/group_spacing">
            <Button android:id="@id/hosChooser_done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hosChooser_doneButton" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
